--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.5.0",
     "fs-extra": "^11.2.0",
     "nodemon": "^3.1.0",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "socket.io": "^4.7.5"
   }
 }
