--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs-extra": "^11.2.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.5"
   }
 }
