--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "npx nodemon ."
+    "dev": "npx nodemon .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.22.0",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -20,5 +21,9 @@
     "prisma": "^5.13.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0"
   }
 }
